# QT6_ChatApp

./: .gitignore  CMakeLists.txt  qt6-mingw-x64.cmake  readme.md  server.py
instance/: chat.db
src/: BaseController.h  ClientApp.cpp  ClientApp.h  FriendchatWindow.cpp  FriendchatWindow.h  GroupchatWindow.cpp  GroupchatWindow.h  MainController.cpp  MainController.h  NetworkHelper.cpp  NetworkHelper.h  View.h  abstractChatItem.h  chatItemController.cpp  chatItemController.h  chatWidgetItem.cpp  chatWidgetItem.h  groupChatItem.h  heartbeatController.cpp  heartbeatController.h  loginWidget.cpp  loginWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  message.h  messageController.cpp  messageController.h  processController.cpp  processController.h  user.h  userChatItem.h  usercontroller.h  utils.cpp  utils.h
